--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -55,6 +55,9 @@ dependencies {
 
     //  Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    //validation과 관련된 기능 의존성 추가
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
 sourceSets {
